remote_container/kubernetes/deploy_test/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-app
  template:
    metadata:
      labels:
        app: prod-app
    spec:
      serviceAccountName: custom-service-account
      containers:
      - name: django
        image: ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${PROJECT_NAME}-repository/django:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        command:
        - "bash"
        - "-c"
        - |
          cd qrchat &&
          python manage.py makemigrations accounts chat &&
          python manage.py migrate &&
          python manage.py collectstatic --noinput &&
          python manage.py runserver 0.0.0.0:8000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 30

      - name: celery
        image: ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${PROJECT_NAME}-repository/django:latest
        imagePullPolicy: Always
        command:
        - "bash"
        - "-c"
        - |
          cd qrchat &&
          celery -A qrchat worker -l info
