remote_container/kubernetes/deploy_test/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app-deployment
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "custom-backend-config"}'
spec:
  selector:
    app: prod-app
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
