remote_container/kubernetes/deploy_test/managed-cert-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP}
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: http-to-https
spec:
  defaultBackend:
    service:
      name: app-deployment
      port:
        number: 80
